# rdk-mfrlibs

./: CONTRIBUTING.md  Makefile  Makefile.am  NOTICE  build.sh  configure.ac  mfrlib.c  mfrlibs_rpi.c  mfrtherm_mon.c
include/: mfrApi.h  mfrTypes.h
src/: Makefile  mfrcli.c  mfrsrv.c
